envoy/envoy.yml
static_resources:
  listeners:
    - name: listener_8080
      address:
        socket_address: { address: 0.0.0.0, port_value: 8080 }
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: backend
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/a" }
                          route:
                            cluster: service_a
                            prefix_rewrite: "/"
                        - match: { prefix: "/b" }
                          route:
                            cluster: service_b
                            prefix_rewrite: "/"
                http_filters:
                  - name: envoy.filters.http.router
  clusters:
    - name: service_a
      connect_timeout: 0.5s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: service_a
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address: { address: service-a, port_value: 9000 }

    - name: service_b
      connect_timeout: 0.5s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: service_b
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address: { address: service-b, port_value: 9000 }
admin:
  access_log_path: "/dev/null"
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }
